// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy fFrDDW"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy hPtRjJ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy dchidO"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy kKWhET"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhCb fNYure"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy svlnH"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhCb iMBvQG"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AxgMl fjSVTy"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy bfTNar"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhCb etNkhG"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy gQQyXb"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm jcsRXt sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhCb hdIway"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm jcsRXt sc-AxheI bhLjYx"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 1`] = `
<button
  class="sc-AxhUy cCyBop"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm eGfSTk sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 9 size: undefined disabled: false 2`] = `
<a
  class="sc-AxhCb euWTOk"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm eGfSTk sc-AxheI bhLjYx"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AxhUy cDByRo"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AxhUy hCxKQG"
  disabled=""
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AxhUy hdowlx"
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AxhUy boLxxv"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxhUy egMyME"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AxhUy gtczHW"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AxhUy hlIEPx"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AxhUy gGDEFm"
  disabled=""
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AxhUy cA-dhrU"
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AxhUy kCUVKb"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AxhUy ljIDzZ"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AxhUy byjXja"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AxhUy cDByRo"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AxhUy hCxKQG"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AxhUy hdowlx"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AxhUy boLxxv"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxhUy egMyME"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AxhUy gtczHW"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AxhUy hlIEPx"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AxhUy gGDEFm"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AxhUy cA-dhrU"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AxhUy kCUVKb"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AxhUy ljIDzZ"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AxhUy byjXja"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AxgMl yaFjd"
  />
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AxhUy egMyME"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-AxhUy egMyME"
  size="2"
  type="button"
>
  <p
    class="sc-AxjAm pMKRu sc-AxheI bhLjYx"
  >
    News
  </p>
</button>
`;
